tests/TypingSpec/invalid/types/abs-mismatch-lin.algst
let f : Int -> Int = \i -o i in f
